--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -42,6 +42,7 @@
      <Compile Include="Assets\Scripts\PlayerBar.cs" />
      <Compile Include="Assets\Scripts\Enemy.cs" />
      <Compile Include="Assets\Scripts\Camerafollower.cs" />
+     <Compile Include="Assets\enemy_Chase.cs" />
      <Compile Include="Assets\Scripts\SwordAttack.cs" />
     <Reference Include="UnityEngine">
         <HintPath>D:\Program Files\Unity Hub\Editor\2021.3.11f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
