fix camera target in scenes

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -76,11 +76,11 @@
      <Compile Include="Assets\RangedEnemyController.cs" />
      <Compile Include="Assets\lol.cs" />
      <Compile Include="Assets\Scripts\Enemy.cs" />
-     <Compile Include="Assets\Scripts\Camerafollower.cs" />
+     <Compile Include="Assets\Scripts\CameraFollower.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexJitter.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextEventHandler.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextSelector_B.cs" />
-     <Compile Include="Assets\Scripts\npc.cs" />
+     <Compile Include="Assets\Scripts\Npc.cs" />
      <Compile Include="Assets\Scripts\DialogueManager.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\DropdownSample.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_PhoneNumberValidator.cs" />
