fix fireball shooting

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -36,7 +36,7 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\Character\Gargoyole\BulletScript.cs" />
+     <Compile Include="Assets\Character\Gargoyole\Bullet.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SkewTextExample.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SimpleScript.cs" />
      <Compile Include="Assets\Scripts\EnemyAttack.cs" />
