add movedScene bool to scriptable object

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -74,7 +74,8 @@
      <Compile Include="Assets\Scripts\HealthBar.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
      <Compile Include="Assets\Scripts\EnemyChase.cs" />
-     <Compile Include="Assets\ScriptableObjects\VectorValue.cs" />
+     <Compile Include="Assets\ScriptableObjects\sceneChange.cs" />
+     <Compile Include="Assets\Scripts\LevelManager.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark04.cs" />
      <Compile Include="Assets\SceneTransition.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ChatController.cs" />
